iptables.log
[root@middleware-dev-439-d410 huzhi]# iptables-save
# Generated by iptables-save v1.4.21 on Fri Feb 23 11:54:28 2024
*filter
:INPUT ACCEPT [69515:55373413]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [139678:127327180]
:CNI-ADMIN - [0:0]
:CNI-FORWARD - [0:0]
:CNI-ISOLATION-STAGE-1 - [0:0]
:CNI-ISOLATION-STAGE-2 - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-IPVS-FILTER - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SOURCE-RANGES-FIREWALL - [0:0]
-A INPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:0" --nflog-group 22
-A INPUT -m set --match-set ovn40services dst -j ACCEPT
-A INPUT -m set --match-set ovn40services src -j ACCEPT
-A INPUT -m set --match-set ovn40subnets dst -j ACCEPT
-A INPUT -m set --match-set ovn40subnets src -j ACCEPT
-A INPUT -p udp -m udp --dport 6081 -j ACCEPT
-A INPUT -m comment --comment "kubernetes ipvs access filter" -j KUBE-IPVS-FILTER
-A INPUT -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check rules" -j KUBE-NODE-PORT
-A INPUT -j KUBE-FIREWALL
-A FORWARD -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:1" --nflog-group 22
-A FORWARD -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j CNI-ISOLATION-STAGE-1
-A FORWARD -m comment --comment "CNI firewall plugin rules" -j CNI-FORWARD
-A FORWARD -m set --match-set ovn40services dst -j ACCEPT
-A FORWARD -m set --match-set ovn40services src -j ACCEPT
-A FORWARD -m set --match-set ovn40subnets dst -j ACCEPT
-A FORWARD -m set --match-set ovn40subnets src -j ACCEPT
-A FORWARD -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A OUTPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:2" --nflog-group 22
-A OUTPUT -p udp -m udp --dport 6081 -j MARK --set-xmark 0x0/0xffffffff
-A OUTPUT -j KUBE-FIREWALL
-A CNI-ADMIN -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:3" --nflog-group 22
-A CNI-FORWARD -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:4" --nflog-group 22
-A CNI-FORWARD -m comment --comment "CNI firewall plugin admin overrides" -j CNI-ADMIN
-A CNI-FORWARD -d 10.4.0.16/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.16/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.17/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.17/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.18/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.18/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.19/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.19/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.21/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.21/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.22/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.22/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.27/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.27/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.28/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.28/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.29/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.29/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.31/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.31/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.36/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.36/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.41/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.41/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.44/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.44/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.47/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.47/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.49/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.49/32 -j ACCEPT
-A CNI-FORWARD -d 10.4.0.50/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.4.0.50/32 -j ACCEPT
-A CNI-ISOLATION-STAGE-1 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:5" --nflog-group 22
-A CNI-ISOLATION-STAGE-1 -i nerdctl2 ! -o nerdctl2 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j CNI-ISOLATION-STAGE-2
-A CNI-ISOLATION-STAGE-1 -i nerdctl0 ! -o nerdctl0 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j CNI-ISOLATION-STAGE-2
-A CNI-ISOLATION-STAGE-1 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j RETURN
-A CNI-ISOLATION-STAGE-2 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:6" --nflog-group 22
-A CNI-ISOLATION-STAGE-2 -o nerdctl2 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j DROP
-A CNI-ISOLATION-STAGE-2 -o nerdctl0 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j DROP
-A CNI-ISOLATION-STAGE-2 -m comment --comment "CNI firewall plugin rules (ingressPolicy: same-bridge)" -j RETURN
-A KUBE-FIREWALL -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:7" --nflog-group 22
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-IPVS-FILTER -m set --match-set KUBE-LOAD-BALANCER dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-CLUSTER-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-EXTERNAL-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j RETURN
-A KUBE-IPVS-FILTER -m conntrack --ctstate NEW -m set --match-set KUBE-IPVS-IPS dst -j REJECT --reject-with icmp-port-unreachable
-A KUBE-KUBELET-CANARY -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:10" --nflog-group 22
-A KUBE-NODE-PORT -m comment --comment "Kubernetes health check node port" -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j ACCEPT
-A KUBE-PROXY-FIREWALL -m comment --comment "Kubernetes service load balancer ip + port for load balancer with sourceRange" -m set --match-set KUBE-LOAD-BALANCER-FW dst,dst -j KUBE-SOURCE-RANGES-FIREWALL
-A KUBE-SOURCE-RANGES-FIREWALL -m comment --comment "Kubernetes service load balancer ip + port + source cidr for packet filter purpose" -m set --match-set KUBE-LOAD-BALANCER-SOURCE-CIDR dst,dst,src -j RETURN
-A KUBE-SOURCE-RANGES-FIREWALL -j DROP
COMMIT
# Completed on Fri Feb 23 11:59:21 2024
# Generated by iptables-save v1.4.21 on Fri Feb 23 11:59:21 2024
*mangle
:PREROUTING ACCEPT [1284755:771654213]
:INPUT ACCEPT [1284692:771651279]
:FORWARD ACCEPT [57:2508]
:OUTPUT ACCEPT [1480246:1367109152]
:POSTROUTING ACCEPT [1459503:1333094324]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
-A PREROUTING -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:14" --nflog-group 22
-A INPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:15" --nflog-group 22
-A FORWARD -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:16" --nflog-group 22
-A OUTPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:17" --nflog-group 22
-A POSTROUTING -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:18" --nflog-group 22
-A POSTROUTING -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1360
-A KUBE-IPTABLES-HINT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:19" --nflog-group 22
-A KUBE-KUBELET-CANARY -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:20" --nflog-group 22
COMMIT
# Completed on Fri Feb 23 11:59:21 2024
# Generated by iptables-save v1.4.21 on Fri Feb 23 11:59:21 2024
*nat
:PREROUTING ACCEPT [158:21723]
:INPUT ACCEPT [155:21575]
:OUTPUT ACCEPT [282:31287]
:POSTROUTING ACCEPT [186:25623]
:CNI-003e115767e8ba7a62f8bd1b - [0:0]
:CNI-0b0504814ab6f85cd0d7cd3c - [0:0]
:CNI-0d3451fd66a9f999d42c09f5 - [0:0]
:CNI-1174a7aef9b0064572170263 - [0:0]
:CNI-2d9ed92889d871a50449c9ae - [0:0]
:CNI-2e37b779ecef597852e9209f - [0:0]
:CNI-3a46bf2c0c5b2130a64eeb7b - [0:0]
:CNI-3e9526a26813852bff377dbe - [0:0]
:CNI-3ff0bcad0ef446becea8ba12 - [0:0]
:CNI-425f3cbe0772959cdab00b48 - [0:0]
:CNI-4e4ca9c0892267705a9e5f4e - [0:0]
:CNI-5c4a9cc4942603bb77234799 - [0:0]
:CNI-5f76c469ee38102bc9c2c426 - [0:0]
:CNI-643996735702e279e1ceed94 - [0:0]
:CNI-6587f7cfe81b6b9c0909b9e1 - [0:0]
:CNI-67795a6f783a1d146749b906 - [0:0]
:CNI-6af32a03b4dc533b1ecc9b85 - [0:0]
:CNI-6e7b613ba9f00b8eb9e1cf2f - [0:0]
:CNI-857a6a64300fa9e978b831fc - [0:0]
:CNI-88fec880d990473383cce07d - [0:0]
:CNI-8a33fc01e51e86c1d33c124c - [0:0]
:CNI-8c6e2b94b70e415b2c348331 - [0:0]
:CNI-8d6b881612e1a3f827eee820 - [0:0]
:CNI-906b5acdb8c3aa6240340e2d - [0:0]
:CNI-92278337ae3b315afa42c640 - [0:0]
:CNI-9a3f2b829bd951930f064a9e - [0:0]
:CNI-9a7047dbcf85f2c164ee06e2 - [0:0]
:CNI-9ff0d708f93dcd9438ee166e - [0:0]
:CNI-DN-425f3cbe0772959cdab00 - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:CNI-a6ad39b7772addcae97b212c - [0:0]
:CNI-a70ce399e11f2e791b8022ab - [0:0]
:CNI-b7ea3898241acc0329ed58e3 - [0:0]
:CNI-b8a1a8d05a565f66432800cd - [0:0]
:CNI-bb0e36a53db848e78090e602 - [0:0]
:CNI-d1e844604ed6a8a66e8052a6 - [0:0]
:CNI-d51a451549147bd7c6b3faf1 - [0:0]
:CNI-d5f2701166bd1c735760ca14 - [0:0]
:CNI-d69df6d9f2fa7e97c3041a53 - [0:0]
:CNI-dcf73d6f37a8ab023be5ee7c - [0:0]
:CNI-df9d5078e8c4c09672d283c6 - [0:0]
:CNI-e293fed43f248291bc8eb31a - [0:0]
:CNI-e2b3a6e069c7fccb25bbf95e - [0:0]
:CNI-e325961423ac49d11650a463 - [0:0]
:CNI-e604855bc6cb9659ae5c9fde - [0:0]
:CNI-ee0196b6f78b31c7fadb239c - [0:0]
:CNI-f4f9023568092720a12342ac - [0:0]
:CNI-f776528f0c5349739645816e - [0:0]
:CNI-f922c455bb6a285e632e011f - [0:0]
:CNI-fb771262fc45b0aa307a93fe - [0:0]
:CNI-fc25e7003055f33aceebcd7a - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-LOAD-BALANCER - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SERVICES - [0:0]
:OVN-MASQUERADE - [0:0]
:OVN-POSTROUTING - [0:0]
:OVN-PREROUTING - [0:0]
-A PREROUTING -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:21" --nflog-group 22
-A PREROUTING -m comment --comment "kube-ovn prerouting rules" -j OVN-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A INPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:22" --nflog-group 22
-A OUTPUT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:23" --nflog-group 22
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:24" --nflog-group 22
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kube-ovn postrouting rules" -j OVN-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 10.4.0.16/32 -m comment --comment "name: \"bridge\" id: \"default-59a6cca45cde4bea33a968794b56e470f3150f4192119a1376a379c41a07107e\"" -j CNI-2e37b779ecef597852e9209f
-A POSTROUTING -s 10.4.0.17/32 -m comment --comment "name: \"bridge\" id: \"default-c0782000bf0a5d8e1b6f31980ec79a45df334954f27bd452d98ca35e0390841e\"" -j CNI-e604855bc6cb9659ae5c9fde
-A POSTROUTING -s 10.4.0.18/32 -m comment --comment "name: \"bridge\" id: \"default-f617b2e339dd374fda107823adec8ec3b33acd210c4168c19f2ab5eae533893a\"" -j CNI-906b5acdb8c3aa6240340e2d
-A POSTROUTING -s 10.4.0.19/32 -m comment --comment "name: \"bridge\" id: \"default-20447f204eee1bc6650fbe5d30e3ba74ead843e930948e664602625a81da43e6\"" -j CNI-8c6e2b94b70e415b2c348331
-A POSTROUTING -s 10.4.0.20/32 -m comment --comment "name: \"bridge\" id: \"default-a73ece69c987aa00e8a370e591eee4389ef80456e18f632897539a0053865a44\"" -j CNI-b7ea3898241acc0329ed58e3
-A POSTROUTING -s 10.4.0.21/32 -m comment --comment "name: \"bridge\" id: \"default-de6649904b936817ca903cdc31f9f92e58d0e88e8f9c3e9376ac6db5efea4ca3\"" -j CNI-e325961423ac49d11650a463
-A POSTROUTING -s 10.4.0.22/32 -m comment --comment "name: \"bridge\" id: \"default-8e21a13e1afd0b3eeb8cceeb1f3a31caa9674ef1a17446e6fe58b59b9ac5cdf4\"" -j CNI-8d6b881612e1a3f827eee820
-A POSTROUTING -s 10.4.0.23/32 -m comment --comment "name: \"bridge\" id: \"default-ede03f14068d41b4666d84664e95503838762a032c814a4a7a2196536fc2bada\"" -j CNI-5f76c469ee38102bc9c2c426
-A POSTROUTING -s 10.4.0.24/32 -m comment --comment "name: \"bridge\" id: \"default-f116658d9a13dd9e7d84d6a362e8a1fe0e87445f4da901fae5778e7394c0e32e\"" -j CNI-6587f7cfe81b6b9c0909b9e1
-A POSTROUTING -s 10.4.0.25/32 -m comment --comment "name: \"bridge\" id: \"default-ac392c0cda99cde3fb35c2ed0834c3dca34f99c6d5cc545658b707e68d3cbb29\"" -j CNI-df9d5078e8c4c09672d283c6
-A POSTROUTING -s 10.4.0.26/32 -m comment --comment "name: \"bridge\" id: \"default-da2d59f03eaf32929209a9045ae5076784c153377db89fc4b5ecf66b40973555\"" -j CNI-ee0196b6f78b31c7fadb239c
-A POSTROUTING -s 10.4.0.27/32 -m comment --comment "name: \"bridge\" id: \"default-fc7812d276bbab4aec56b906d7d9bf7edbce03249f1eaad352b97222e9a68e6a\"" -j CNI-e2b3a6e069c7fccb25bbf95e
-A POSTROUTING -s 10.4.0.28/32 -m comment --comment "name: \"bridge\" id: \"default-385289f4bc7b7050d539a1df28db6e339047746f4671aa83c0a5d3d20fefc8b8\"" -j CNI-8a33fc01e51e86c1d33c124c
-A POSTROUTING -s 10.4.0.29/32 -m comment --comment "name: \"bridge\" id: \"default-582c5f529f8684d1a73585b5627a6a1423a456a3c710e2eb9ebb9669e1691771\"" -j CNI-3ff0bcad0ef446becea8ba12
-A POSTROUTING -s 10.4.0.30/32 -m comment --comment "name: \"bridge\" id: \"default-292c8de6cfb0d0c250d3797ea5e73c8843357ee5ac222e9cbf9dc0ca335376c2\"" -j CNI-fc25e7003055f33aceebcd7a
-A POSTROUTING -s 10.4.0.31/32 -m comment --comment "name: \"bridge\" id: \"default-a8471f7bb2a57f6d55ca65713918757cd68f8a495cbcd9d7d3ed40abb34072b4\"" -j CNI-fb771262fc45b0aa307a93fe
-A POSTROUTING -s 10.4.0.32/32 -m comment --comment "name: \"bridge\" id: \"default-7e4817679c177a96c05609e53e090c29d88f68b290b023996e01064d2cdc0d15\"" -j CNI-003e115767e8ba7a62f8bd1b
-A POSTROUTING -s 10.4.0.33/32 -m comment --comment "name: \"bridge\" id: \"default-21254efbf080cbc8f727454b47ffa8ef47e9608e3d03dae4127c81b34f8d0365\"" -j CNI-6e7b613ba9f00b8eb9e1cf2f
-A POSTROUTING -s 10.4.0.34/32 -m comment --comment "name: \"bridge\" id: \"default-e826e73a18cec219ad6bdaa4ce2bbfd6b0af95f24ae9faa5e3ecebd664783cae\"" -j CNI-bb0e36a53db848e78090e602
-A POSTROUTING -s 10.4.0.35/32 -m comment --comment "name: \"bridge\" id: \"default-2c0ffb87aaa1aa53c0a09a77df756292bd6f03acbb997731c0505bd6a9d81f3f\"" -j CNI-5c4a9cc4942603bb77234799
-A POSTROUTING -s 10.4.0.36/32 -m comment --comment "name: \"bridge\" id: \"default-82d6d50ede605f832bb54b58b4419db66d522a4800227d6fa3434ccc060fae66\"" -j CNI-d69df6d9f2fa7e97c3041a53
-A POSTROUTING -s 10.4.0.37/32 -m comment --comment "name: \"bridge\" id: \"default-f2157a3fcc6cc28716957be4323d1cce2bfd9599b6dd428ac8d69a34aae4315b\"" -j CNI-643996735702e279e1ceed94
-A POSTROUTING -s 10.4.0.38/32 -m comment --comment "name: \"bridge\" id: \"default-41d9fdbd09310243682e39f8ac45af361174f88c07225262518da7fbe96da5f5\"" -j CNI-a70ce399e11f2e791b8022ab
-A POSTROUTING -s 10.4.0.39/32 -m comment --comment "name: \"bridge\" id: \"default-552bbc95c9d52ceb4c5fab07825142952c64717b949b1bd5a2d99c2a10aee339\"" -j CNI-9a3f2b829bd951930f064a9e
-A POSTROUTING -s 10.4.0.40/32 -m comment --comment "name: \"bridge\" id: \"default-32d854b78a08cc15c184b1c2d59c080b82d7fa7de63717afbb815b45a4d76d80\"" -j CNI-f922c455bb6a285e632e011f
-A POSTROUTING -s 10.4.0.41/32 -m comment --comment "name: \"bridge\" id: \"default-cbbdd319536a6d6ec8ba2eba6df2c8a4c9fc4a9833179c36fbdb8f7efa409624\"" -j CNI-a6ad39b7772addcae97b212c
-A POSTROUTING -s 10.4.0.42/32 -m comment --comment "name: \"bridge\" id: \"default-3f0389f09b89cc29a9f334ce756e5a6a0e71774e636df6b1dc27f64f07a0e293\"" -j CNI-d51a451549147bd7c6b3faf1
-A POSTROUTING -s 10.4.0.43/32 -m comment --comment "name: \"bridge\" id: \"default-fc20e190a6d2c05462ee83851902cbc457931a7fce420ae2de1aa68aef9e86f0\"" -j CNI-88fec880d990473383cce07d
-A POSTROUTING -s 10.4.0.44/32 -m comment --comment "name: \"bridge\" id: \"default-cd86930518a981ace66755413418a8a3d8e4fbbc3a300776eb423311b1ff0f6a\"" -j CNI-0d3451fd66a9f999d42c09f5
-A POSTROUTING -s 10.4.0.45/32 -m comment --comment "name: \"bridge\" id: \"default-a4c1919027402bf13099b3298c480e3db70466f2b18b4bbcdce7f459328e3e20\"" -j CNI-0b0504814ab6f85cd0d7cd3c
-A POSTROUTING -s 10.4.0.46/32 -m comment --comment "name: \"bridge\" id: \"default-8dfcccce118315a1be5a3a783796f00e91b5481543d2e9066299544e25e4d01f\"" -j CNI-d1e844604ed6a8a66e8052a6
-A POSTROUTING -s 10.4.0.47/32 -m comment --comment "name: \"bridge\" id: \"default-899346a0978b69dd2121c4229c9e9a4170b719213ca2e837d00861de922636de\"" -j CNI-9a7047dbcf85f2c164ee06e2
-A POSTROUTING -s 10.4.0.48/32 -m comment --comment "name: \"bridge\" id: \"default-3edf224fcd805d18937b2e398377f04f9a404ee4db200de014c5c447f8d54d01\"" -j CNI-1174a7aef9b0064572170263
-A POSTROUTING -s 10.4.0.49/32 -m comment --comment "name: \"bridge\" id: \"default-4e95504aa8498eec2757fddba071688f18ece7b697d5af85a537102ea7f4c049\"" -j CNI-425f3cbe0772959cdab00b48
-A POSTROUTING -s 10.4.0.50/32 -m comment --comment "name: \"bridge\" id: \"default-ba3b378f53956401b48104c7eea9ecc058d966852943e89a88d5e47b58d938b8\"" -j CNI-92278337ae3b315afa42c640
-A POSTROUTING -s 10.4.0.51/32 -m comment --comment "name: \"bridge\" id: \"default-2d187312ef1bb7296470f912e9f8532afabb97067cc3168d3238cbd5c7842cbf\"" -j CNI-e293fed43f248291bc8eb31a
-A POSTROUTING -s 10.4.0.52/32 -m comment --comment "name: \"bridge\" id: \"default-62efcab0ab6c6133a3bd3c20fb4a08db82216f04cfe3a682c0eb91473824aaa4\"" -j CNI-f4f9023568092720a12342ac
-A POSTROUTING -s 10.4.2.2/32 -m comment --comment "name: \"my-network-test\" id: \"default-db4b0c05980e61c9344498dda755a5300aefefc4cc0615db5d10d6af7a7087bb\"" -j CNI-2d9ed92889d871a50449c9ae
-A POSTROUTING -s 10.4.2.3/32 -m comment --comment "name: \"my-network-test\" id: \"default-325a6e4fc169f07f27323a6e41091a732a31258abdf615080b3357bb5d1e8834\"" -j CNI-9ff0d708f93dcd9438ee166e
-A POSTROUTING -s 10.4.2.4/32 -m comment --comment "name: \"my-network-test\" id: \"default-378294c678030ed3d0a379931b0f68c19f65805895c847becb9b1cdafb2b0c5c\"" -j CNI-67795a6f783a1d146749b906
-A POSTROUTING -s 10.4.2.5/32 -m comment --comment "name: \"my-network-test\" id: \"default-8ed1368e28fa171257794a30198e93a806934dc1b0c2039c99e49478655453a2\"" -j CNI-3a46bf2c0c5b2130a64eeb7b
-A POSTROUTING -s 10.4.2.6/32 -m comment --comment "name: \"my-network-test\" id: \"default-34da0e70c9c69e02cdc4ad11e205bbee712c2b4a0e5e7c57f549907b3e1b1ca5\"" -j CNI-6af32a03b4dc533b1ecc9b85
-A POSTROUTING -s 10.4.2.7/32 -m comment --comment "name: \"my-network-test\" id: \"default-f82705bf2a6742f18a5aea3117aa4e599eb03d771c198b75d2289b80ee591a18\"" -j CNI-857a6a64300fa9e978b831fc
-A POSTROUTING -s 10.4.2.8/32 -m comment --comment "name: \"my-network-test\" id: \"default-2f85de00d2fceba090f5b7c0750eb368b6efcbeab3a7e9e9e56b10be77cf83b7\"" -j CNI-3e9526a26813852bff377dbe
-A POSTROUTING -s 10.4.2.9/32 -m comment --comment "name: \"my-network-test\" id: \"default-35303c8892f89328c33c10535e84955154531604b187892f53d440a23f689b36\"" -j CNI-dcf73d6f37a8ab023be5ee7c
-A POSTROUTING -s 10.4.0.53/32 -m comment --comment "name: \"bridge\" id: \"default-ccd37fe0a6f19c7bf68f1ffc65a8596d9db350c011db7122b1399daf298848e9\"" -j CNI-f776528f0c5349739645816e
-A POSTROUTING -s 10.4.2.10/32 -m comment --comment "name: \"my-network-test\" id: \"default-641f69efbea3a0f040b2ee945e59df1c59b0ef195c36904ffa39d944952c6e7b\"" -j CNI-d5f2701166bd1c735760ca14
-A POSTROUTING -s 10.4.0.54/32 -m comment --comment "name: \"bridge\" id: \"default-c005275377c1d27a500d55dcd9081cbe5fd7ab2679231455398bd660209173b8\"" -j CNI-4e4ca9c0892267705a9e5f4e
-A POSTROUTING -s 10.4.2.11/32 -m comment --comment "name: \"my-network-test\" id: \"default-6628f905bfc32f0b814d211f2f502b2736500ad4bc190878ca4d8f9b7d731b21\"" -j CNI-b8a1a8d05a565f66432800cd
-A CNI-003e115767e8ba7a62f8bd1b -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:25" --nflog-group 22
-A CNI-003e115767e8ba7a62f8bd1b -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-7e4817679c177a96c05609e53e090c29d88f68b290b023996e01064d2cdc0d15\"" -j ACCEPT
-A CNI-003e115767e8ba7a62f8bd1b ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-7e4817679c177a96c05609e53e090c29d88f68b290b023996e01064d2cdc0d15\"" -j MASQUERADE
-A CNI-0b0504814ab6f85cd0d7cd3c -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:26" --nflog-group 22
-A CNI-0b0504814ab6f85cd0d7cd3c -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-a4c1919027402bf13099b3298c480e3db70466f2b18b4bbcdce7f459328e3e20\"" -j ACCEPT
-A CNI-0b0504814ab6f85cd0d7cd3c ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-a4c1919027402bf13099b3298c480e3db70466f2b18b4bbcdce7f459328e3e20\"" -j MASQUERADE
-A CNI-0d3451fd66a9f999d42c09f5 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:27" --nflog-group 22
-A CNI-0d3451fd66a9f999d42c09f5 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-cd86930518a981ace66755413418a8a3d8e4fbbc3a300776eb423311b1ff0f6a\"" -j ACCEPT
-A CNI-0d3451fd66a9f999d42c09f5 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-cd86930518a981ace66755413418a8a3d8e4fbbc3a300776eb423311b1ff0f6a\"" -j MASQUERADE
-A CNI-1174a7aef9b0064572170263 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:28" --nflog-group 22
-A CNI-1174a7aef9b0064572170263 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-3edf224fcd805d18937b2e398377f04f9a404ee4db200de014c5c447f8d54d01\"" -j ACCEPT
-A CNI-1174a7aef9b0064572170263 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-3edf224fcd805d18937b2e398377f04f9a404ee4db200de014c5c447f8d54d01\"" -j MASQUERADE
-A CNI-2d9ed92889d871a50449c9ae -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:29" --nflog-group 22
-A CNI-2d9ed92889d871a50449c9ae -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-db4b0c05980e61c9344498dda755a5300aefefc4cc0615db5d10d6af7a7087bb\"" -j ACCEPT
-A CNI-2d9ed92889d871a50449c9ae ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-db4b0c05980e61c9344498dda755a5300aefefc4cc0615db5d10d6af7a7087bb\"" -j MASQUERADE
-A CNI-2e37b779ecef597852e9209f -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:30" --nflog-group 22
-A CNI-2e37b779ecef597852e9209f -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-59a6cca45cde4bea33a968794b56e470f3150f4192119a1376a379c41a07107e\"" -j ACCEPT
-A CNI-2e37b779ecef597852e9209f ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-59a6cca45cde4bea33a968794b56e470f3150f4192119a1376a379c41a07107e\"" -j MASQUERADE
-A CNI-3a46bf2c0c5b2130a64eeb7b -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:31" --nflog-group 22
-A CNI-3a46bf2c0c5b2130a64eeb7b -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-8ed1368e28fa171257794a30198e93a806934dc1b0c2039c99e49478655453a2\"" -j ACCEPT
-A CNI-3a46bf2c0c5b2130a64eeb7b ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-8ed1368e28fa171257794a30198e93a806934dc1b0c2039c99e49478655453a2\"" -j MASQUERADE
-A CNI-3e9526a26813852bff377dbe -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:32" --nflog-group 22
-A CNI-3e9526a26813852bff377dbe -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-2f85de00d2fceba090f5b7c0750eb368b6efcbeab3a7e9e9e56b10be77cf83b7\"" -j ACCEPT
-A CNI-3e9526a26813852bff377dbe ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-2f85de00d2fceba090f5b7c0750eb368b6efcbeab3a7e9e9e56b10be77cf83b7\"" -j MASQUERADE
-A CNI-3ff0bcad0ef446becea8ba12 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:33" --nflog-group 22
-A CNI-3ff0bcad0ef446becea8ba12 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-582c5f529f8684d1a73585b5627a6a1423a456a3c710e2eb9ebb9669e1691771\"" -j ACCEPT
-A CNI-3ff0bcad0ef446becea8ba12 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-582c5f529f8684d1a73585b5627a6a1423a456a3c710e2eb9ebb9669e1691771\"" -j MASQUERADE
-A CNI-425f3cbe0772959cdab00b48 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:34" --nflog-group 22
-A CNI-425f3cbe0772959cdab00b48 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-4e95504aa8498eec2757fddba071688f18ece7b697d5af85a537102ea7f4c049\"" -j ACCEPT
-A CNI-425f3cbe0772959cdab00b48 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-4e95504aa8498eec2757fddba071688f18ece7b697d5af85a537102ea7f4c049\"" -j MASQUERADE
-A CNI-4e4ca9c0892267705a9e5f4e -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:35" --nflog-group 22
-A CNI-4e4ca9c0892267705a9e5f4e -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-c005275377c1d27a500d55dcd9081cbe5fd7ab2679231455398bd660209173b8\"" -j ACCEPT
-A CNI-4e4ca9c0892267705a9e5f4e ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-c005275377c1d27a500d55dcd9081cbe5fd7ab2679231455398bd660209173b8\"" -j MASQUERADE
-A CNI-5c4a9cc4942603bb77234799 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:36" --nflog-group 22
-A CNI-5c4a9cc4942603bb77234799 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-2c0ffb87aaa1aa53c0a09a77df756292bd6f03acbb997731c0505bd6a9d81f3f\"" -j ACCEPT
-A CNI-5c4a9cc4942603bb77234799 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-2c0ffb87aaa1aa53c0a09a77df756292bd6f03acbb997731c0505bd6a9d81f3f\"" -j MASQUERADE
-A CNI-5f76c469ee38102bc9c2c426 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:37" --nflog-group 22
-A CNI-5f76c469ee38102bc9c2c426 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-ede03f14068d41b4666d84664e95503838762a032c814a4a7a2196536fc2bada\"" -j ACCEPT
-A CNI-5f76c469ee38102bc9c2c426 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-ede03f14068d41b4666d84664e95503838762a032c814a4a7a2196536fc2bada\"" -j MASQUERADE
-A CNI-643996735702e279e1ceed94 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:38" --nflog-group 22
-A CNI-643996735702e279e1ceed94 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-f2157a3fcc6cc28716957be4323d1cce2bfd9599b6dd428ac8d69a34aae4315b\"" -j ACCEPT
-A CNI-643996735702e279e1ceed94 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-f2157a3fcc6cc28716957be4323d1cce2bfd9599b6dd428ac8d69a34aae4315b\"" -j MASQUERADE
-A CNI-6587f7cfe81b6b9c0909b9e1 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:39" --nflog-group 22
-A CNI-6587f7cfe81b6b9c0909b9e1 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-f116658d9a13dd9e7d84d6a362e8a1fe0e87445f4da901fae5778e7394c0e32e\"" -j ACCEPT
-A CNI-6587f7cfe81b6b9c0909b9e1 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-f116658d9a13dd9e7d84d6a362e8a1fe0e87445f4da901fae5778e7394c0e32e\"" -j MASQUERADE
-A CNI-67795a6f783a1d146749b906 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:40" --nflog-group 22
-A CNI-67795a6f783a1d146749b906 -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-378294c678030ed3d0a379931b0f68c19f65805895c847becb9b1cdafb2b0c5c\"" -j ACCEPT
-A CNI-67795a6f783a1d146749b906 ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-378294c678030ed3d0a379931b0f68c19f65805895c847becb9b1cdafb2b0c5c\"" -j MASQUERADE
-A CNI-6af32a03b4dc533b1ecc9b85 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:41" --nflog-group 22
-A CNI-6af32a03b4dc533b1ecc9b85 -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-34da0e70c9c69e02cdc4ad11e205bbee712c2b4a0e5e7c57f549907b3e1b1ca5\"" -j ACCEPT
-A CNI-6af32a03b4dc533b1ecc9b85 ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-34da0e70c9c69e02cdc4ad11e205bbee712c2b4a0e5e7c57f549907b3e1b1ca5\"" -j MASQUERADE
-A CNI-6e7b613ba9f00b8eb9e1cf2f -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:42" --nflog-group 22
-A CNI-6e7b613ba9f00b8eb9e1cf2f -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-21254efbf080cbc8f727454b47ffa8ef47e9608e3d03dae4127c81b34f8d0365\"" -j ACCEPT
-A CNI-6e7b613ba9f00b8eb9e1cf2f ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-21254efbf080cbc8f727454b47ffa8ef47e9608e3d03dae4127c81b34f8d0365\"" -j MASQUERADE
-A CNI-857a6a64300fa9e978b831fc -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:43" --nflog-group 22
-A CNI-857a6a64300fa9e978b831fc -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-f82705bf2a6742f18a5aea3117aa4e599eb03d771c198b75d2289b80ee591a18\"" -j ACCEPT
-A CNI-857a6a64300fa9e978b831fc ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-f82705bf2a6742f18a5aea3117aa4e599eb03d771c198b75d2289b80ee591a18\"" -j MASQUERADE
-A CNI-88fec880d990473383cce07d -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:44" --nflog-group 22
-A CNI-88fec880d990473383cce07d -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-fc20e190a6d2c05462ee83851902cbc457931a7fce420ae2de1aa68aef9e86f0\"" -j ACCEPT
-A CNI-88fec880d990473383cce07d ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-fc20e190a6d2c05462ee83851902cbc457931a7fce420ae2de1aa68aef9e86f0\"" -j MASQUERADE
-A CNI-8a33fc01e51e86c1d33c124c -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:45" --nflog-group 22
-A CNI-8a33fc01e51e86c1d33c124c -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-385289f4bc7b7050d539a1df28db6e339047746f4671aa83c0a5d3d20fefc8b8\"" -j ACCEPT
-A CNI-8a33fc01e51e86c1d33c124c ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-385289f4bc7b7050d539a1df28db6e339047746f4671aa83c0a5d3d20fefc8b8\"" -j MASQUERADE
-A CNI-8c6e2b94b70e415b2c348331 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:46" --nflog-group 22
-A CNI-8c6e2b94b70e415b2c348331 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-20447f204eee1bc6650fbe5d30e3ba74ead843e930948e664602625a81da43e6\"" -j ACCEPT
-A CNI-8c6e2b94b70e415b2c348331 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-20447f204eee1bc6650fbe5d30e3ba74ead843e930948e664602625a81da43e6\"" -j MASQUERADE
-A CNI-8d6b881612e1a3f827eee820 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:47" --nflog-group 22
-A CNI-8d6b881612e1a3f827eee820 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-8e21a13e1afd0b3eeb8cceeb1f3a31caa9674ef1a17446e6fe58b59b9ac5cdf4\"" -j ACCEPT
-A CNI-8d6b881612e1a3f827eee820 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-8e21a13e1afd0b3eeb8cceeb1f3a31caa9674ef1a17446e6fe58b59b9ac5cdf4\"" -j MASQUERADE
-A CNI-906b5acdb8c3aa6240340e2d -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:48" --nflog-group 22
-A CNI-906b5acdb8c3aa6240340e2d -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-f617b2e339dd374fda107823adec8ec3b33acd210c4168c19f2ab5eae533893a\"" -j ACCEPT
-A CNI-906b5acdb8c3aa6240340e2d ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-f617b2e339dd374fda107823adec8ec3b33acd210c4168c19f2ab5eae533893a\"" -j MASQUERADE
-A CNI-92278337ae3b315afa42c640 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:49" --nflog-group 22
-A CNI-92278337ae3b315afa42c640 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-ba3b378f53956401b48104c7eea9ecc058d966852943e89a88d5e47b58d938b8\"" -j ACCEPT
-A CNI-92278337ae3b315afa42c640 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-ba3b378f53956401b48104c7eea9ecc058d966852943e89a88d5e47b58d938b8\"" -j MASQUERADE
-A CNI-9a3f2b829bd951930f064a9e -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:50" --nflog-group 22
-A CNI-9a3f2b829bd951930f064a9e -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-552bbc95c9d52ceb4c5fab07825142952c64717b949b1bd5a2d99c2a10aee339\"" -j ACCEPT
-A CNI-9a3f2b829bd951930f064a9e ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-552bbc95c9d52ceb4c5fab07825142952c64717b949b1bd5a2d99c2a10aee339\"" -j MASQUERADE
-A CNI-9a7047dbcf85f2c164ee06e2 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:51" --nflog-group 22
-A CNI-9a7047dbcf85f2c164ee06e2 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-899346a0978b69dd2121c4229c9e9a4170b719213ca2e837d00861de922636de\"" -j ACCEPT
-A CNI-9a7047dbcf85f2c164ee06e2 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-899346a0978b69dd2121c4229c9e9a4170b719213ca2e837d00861de922636de\"" -j MASQUERADE
-A CNI-9ff0d708f93dcd9438ee166e -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:52" --nflog-group 22
-A CNI-9ff0d708f93dcd9438ee166e -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-325a6e4fc169f07f27323a6e41091a732a31258abdf615080b3357bb5d1e8834\"" -j ACCEPT
-A CNI-9ff0d708f93dcd9438ee166e ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-325a6e4fc169f07f27323a6e41091a732a31258abdf615080b3357bb5d1e8834\"" -j MASQUERADE
-A CNI-DN-425f3cbe0772959cdab00 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:53" --nflog-group 22
-A CNI-DN-425f3cbe0772959cdab00 -s 10.4.0.0/24 -p tcp -m tcp --dport 8080 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-425f3cbe0772959cdab00 -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-425f3cbe0772959cdab00 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.4.0.49:80
-A CNI-HOSTPORT-DNAT -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:54" --nflog-group 22
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"bridge\" id: \"default-4e95504aa8498eec2757fddba071688f18ece7b697d5af85a537102ea7f4c049\"" -m multiport --dports 8080 -j CNI-DN-425f3cbe0772959cdab00
-A CNI-HOSTPORT-MASQ -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:55" --nflog-group 22
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:56" --nflog-group 22
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A CNI-a6ad39b7772addcae97b212c -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:57" --nflog-group 22
-A CNI-a6ad39b7772addcae97b212c -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-cbbdd319536a6d6ec8ba2eba6df2c8a4c9fc4a9833179c36fbdb8f7efa409624\"" -j ACCEPT
-A CNI-a6ad39b7772addcae97b212c ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-cbbdd319536a6d6ec8ba2eba6df2c8a4c9fc4a9833179c36fbdb8f7efa409624\"" -j MASQUERADE
-A CNI-a70ce399e11f2e791b8022ab -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:58" --nflog-group 22
-A CNI-a70ce399e11f2e791b8022ab -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-41d9fdbd09310243682e39f8ac45af361174f88c07225262518da7fbe96da5f5\"" -j ACCEPT
-A CNI-a70ce399e11f2e791b8022ab ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-41d9fdbd09310243682e39f8ac45af361174f88c07225262518da7fbe96da5f5\"" -j MASQUERADE
-A CNI-b7ea3898241acc0329ed58e3 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:59" --nflog-group 22
-A CNI-b7ea3898241acc0329ed58e3 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-a73ece69c987aa00e8a370e591eee4389ef80456e18f632897539a0053865a44\"" -j ACCEPT
-A CNI-b7ea3898241acc0329ed58e3 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-a73ece69c987aa00e8a370e591eee4389ef80456e18f632897539a0053865a44\"" -j MASQUERADE
-A CNI-b8a1a8d05a565f66432800cd -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:60" --nflog-group 22
-A CNI-b8a1a8d05a565f66432800cd -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-6628f905bfc32f0b814d211f2f502b2736500ad4bc190878ca4d8f9b7d731b21\"" -j ACCEPT
-A CNI-b8a1a8d05a565f66432800cd ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-6628f905bfc32f0b814d211f2f502b2736500ad4bc190878ca4d8f9b7d731b21\"" -j MASQUERADE
-A CNI-bb0e36a53db848e78090e602 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:61" --nflog-group 22
-A CNI-bb0e36a53db848e78090e602 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-e826e73a18cec219ad6bdaa4ce2bbfd6b0af95f24ae9faa5e3ecebd664783cae\"" -j ACCEPT
-A CNI-bb0e36a53db848e78090e602 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-e826e73a18cec219ad6bdaa4ce2bbfd6b0af95f24ae9faa5e3ecebd664783cae\"" -j MASQUERADE
-A CNI-d1e844604ed6a8a66e8052a6 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:62" --nflog-group 22
-A CNI-d1e844604ed6a8a66e8052a6 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-8dfcccce118315a1be5a3a783796f00e91b5481543d2e9066299544e25e4d01f\"" -j ACCEPT
-A CNI-d1e844604ed6a8a66e8052a6 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-8dfcccce118315a1be5a3a783796f00e91b5481543d2e9066299544e25e4d01f\"" -j MASQUERADE
-A CNI-d51a451549147bd7c6b3faf1 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:63" --nflog-group 22
-A CNI-d51a451549147bd7c6b3faf1 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-3f0389f09b89cc29a9f334ce756e5a6a0e71774e636df6b1dc27f64f07a0e293\"" -j ACCEPT
-A CNI-d51a451549147bd7c6b3faf1 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-3f0389f09b89cc29a9f334ce756e5a6a0e71774e636df6b1dc27f64f07a0e293\"" -j MASQUERADE
-A CNI-d5f2701166bd1c735760ca14 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:64" --nflog-group 22
-A CNI-d5f2701166bd1c735760ca14 -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-641f69efbea3a0f040b2ee945e59df1c59b0ef195c36904ffa39d944952c6e7b\"" -j ACCEPT
-A CNI-d5f2701166bd1c735760ca14 ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-641f69efbea3a0f040b2ee945e59df1c59b0ef195c36904ffa39d944952c6e7b\"" -j MASQUERADE
-A CNI-d69df6d9f2fa7e97c3041a53 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:65" --nflog-group 22
-A CNI-d69df6d9f2fa7e97c3041a53 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-82d6d50ede605f832bb54b58b4419db66d522a4800227d6fa3434ccc060fae66\"" -j ACCEPT
-A CNI-d69df6d9f2fa7e97c3041a53 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-82d6d50ede605f832bb54b58b4419db66d522a4800227d6fa3434ccc060fae66\"" -j MASQUERADE
-A CNI-dcf73d6f37a8ab023be5ee7c -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:66" --nflog-group 22
-A CNI-dcf73d6f37a8ab023be5ee7c -d 10.4.2.0/24 -m comment --comment "name: \"my-network-test\" id: \"default-35303c8892f89328c33c10535e84955154531604b187892f53d440a23f689b36\"" -j ACCEPT
-A CNI-dcf73d6f37a8ab023be5ee7c ! -d 224.0.0.0/4 -m comment --comment "name: \"my-network-test\" id: \"default-35303c8892f89328c33c10535e84955154531604b187892f53d440a23f689b36\"" -j MASQUERADE
-A CNI-df9d5078e8c4c09672d283c6 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:67" --nflog-group 22
-A CNI-df9d5078e8c4c09672d283c6 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-ac392c0cda99cde3fb35c2ed0834c3dca34f99c6d5cc545658b707e68d3cbb29\"" -j ACCEPT
-A CNI-df9d5078e8c4c09672d283c6 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-ac392c0cda99cde3fb35c2ed0834c3dca34f99c6d5cc545658b707e68d3cbb29\"" -j MASQUERADE
-A CNI-e293fed43f248291bc8eb31a -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:68" --nflog-group 22
-A CNI-e293fed43f248291bc8eb31a -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-2d187312ef1bb7296470f912e9f8532afabb97067cc3168d3238cbd5c7842cbf\"" -j ACCEPT
-A CNI-e293fed43f248291bc8eb31a ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-2d187312ef1bb7296470f912e9f8532afabb97067cc3168d3238cbd5c7842cbf\"" -j MASQUERADE
-A CNI-e2b3a6e069c7fccb25bbf95e -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:69" --nflog-group 22
-A CNI-e2b3a6e069c7fccb25bbf95e -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-fc7812d276bbab4aec56b906d7d9bf7edbce03249f1eaad352b97222e9a68e6a\"" -j ACCEPT
-A CNI-e2b3a6e069c7fccb25bbf95e ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-fc7812d276bbab4aec56b906d7d9bf7edbce03249f1eaad352b97222e9a68e6a\"" -j MASQUERADE
-A CNI-e325961423ac49d11650a463 -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:70" --nflog-group 22
-A CNI-e325961423ac49d11650a463 -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-de6649904b936817ca903cdc31f9f92e58d0e88e8f9c3e9376ac6db5efea4ca3\"" -j ACCEPT
-A CNI-e325961423ac49d11650a463 ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-de6649904b936817ca903cdc31f9f92e58d0e88e8f9c3e9376ac6db5efea4ca3\"" -j MASQUERADE
-A CNI-e604855bc6cb9659ae5c9fde -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:71" --nflog-group 22
-A CNI-e604855bc6cb9659ae5c9fde -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-c0782000bf0a5d8e1b6f31980ec79a45df334954f27bd452d98ca35e0390841e\"" -j ACCEPT
-A CNI-e604855bc6cb9659ae5c9fde ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-c0782000bf0a5d8e1b6f31980ec79a45df334954f27bd452d98ca35e0390841e\"" -j MASQUERADE
-A CNI-ee0196b6f78b31c7fadb239c -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:72" --nflog-group 22
-A CNI-ee0196b6f78b31c7fadb239c -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-da2d59f03eaf32929209a9045ae5076784c153377db89fc4b5ecf66b40973555\"" -j ACCEPT
-A CNI-ee0196b6f78b31c7fadb239c ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-da2d59f03eaf32929209a9045ae5076784c153377db89fc4b5ecf66b40973555\"" -j MASQUERADE
-A CNI-f4f9023568092720a12342ac -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:73" --nflog-group 22
-A CNI-f4f9023568092720a12342ac -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-62efcab0ab6c6133a3bd3c20fb4a08db82216f04cfe3a682c0eb91473824aaa4\"" -j ACCEPT
-A CNI-f4f9023568092720a12342ac ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-62efcab0ab6c6133a3bd3c20fb4a08db82216f04cfe3a682c0eb91473824aaa4\"" -j MASQUERADE
-A CNI-f776528f0c5349739645816e -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:74" --nflog-group 22
-A CNI-f776528f0c5349739645816e -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-ccd37fe0a6f19c7bf68f1ffc65a8596d9db350c011db7122b1399daf298848e9\"" -j ACCEPT
-A CNI-f776528f0c5349739645816e ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-ccd37fe0a6f19c7bf68f1ffc65a8596d9db350c011db7122b1399daf298848e9\"" -j MASQUERADE
-A CNI-f922c455bb6a285e632e011f -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:75" --nflog-group 22
-A CNI-f922c455bb6a285e632e011f -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-32d854b78a08cc15c184b1c2d59c080b82d7fa7de63717afbb815b45a4d76d80\"" -j ACCEPT
-A CNI-f922c455bb6a285e632e011f ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-32d854b78a08cc15c184b1c2d59c080b82d7fa7de63717afbb815b45a4d76d80\"" -j MASQUERADE
-A CNI-fb771262fc45b0aa307a93fe -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:76" --nflog-group 22
-A CNI-fb771262fc45b0aa307a93fe -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-a8471f7bb2a57f6d55ca65713918757cd68f8a495cbcd9d7d3ed40abb34072b4\"" -j ACCEPT
-A CNI-fb771262fc45b0aa307a93fe ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-a8471f7bb2a57f6d55ca65713918757cd68f8a495cbcd9d7d3ed40abb34072b4\"" -j MASQUERADE
-A CNI-fc25e7003055f33aceebcd7a -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:77" --nflog-group 22
-A CNI-fc25e7003055f33aceebcd7a -d 10.4.0.0/24 -m comment --comment "name: \"bridge\" id: \"default-292c8de6cfb0d0c250d3797ea5e73c8843357ee5ac222e9cbf9dc0ca335376c2\"" -j ACCEPT
-A CNI-fc25e7003055f33aceebcd7a ! -d 224.0.0.0/4 -m comment --comment "name: \"bridge\" id: \"default-292c8de6cfb0d0c250d3797ea5e73c8843357ee5ac222e9cbf9dc0ca335376c2\"" -j MASQUERADE
-A KUBE-KUBELET-CANARY -p udp -m udp --dport 53 -j NFLOG --nflog-prefix  "iptr:23121:78" --nflog-group 22
-A KUBE-LOAD-BALANCER -j KUBE-MARK-MASQ
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODE-PORT -p tcp -m comment --comment "Kubernetes nodeport TCP port for masquerade purpose" -m set --match-set KUBE-NODE-PORT-TCP dst -j KUBE-MARK-MASQ
-A KUBE-POSTROUTING -m comment --comment "Kubernetes endpoints dst ip:port, source ip for solving hairpin purpose" -m set --match-set KUBE-LOOP-BACK dst,dst,src -j MASQUERADE
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE
-A KUBE-SERVICES -s 127.0.0.0/8 -j RETURN
-A KUBE-SERVICES -m comment --comment "Kubernetes service lb portal" -m set --match-set KUBE-LOAD-BALANCER dst,dst -j KUBE-LOAD-BALANCER
-A KUBE-SERVICES ! -s 10.3.0.0/16 -m comment --comment "Kubernetes service cluster ip + port for masquerade purpose" -m set --match-set KUBE-CLUSTER-IP dst,dst -j KUBE-MARK-MASQ
-A KUBE-SERVICES -m addrtype --dst-type LOCAL -j KUBE-NODE-PORT
-A KUBE-SERVICES -m set --match-set KUBE-CLUSTER-IP dst,dst -j ACCEPT
-A KUBE-SERVICES -m set --match-set KUBE-LOAD-BALANCER dst,dst -j ACCEPT
-A OVN-MASQUERADE -j MARK --set-xmark 0x0/0xffffffff
-A OVN-MASQUERADE -j MASQUERADE
-A OVN-POSTROUTING -m mark --mark 0x4000/0x4000 -j OVN-MASQUERADE
-A OVN-POSTROUTING -m set --match-set ovn40subnets src -m set --match-set ovn40subnets dst -j OVN-MASQUERADE
-A OVN-POSTROUTING -m mark --mark 0x80000/0x80000 -m set --match-set ovn40subnets-distributed-gw dst -j RETURN
-A OVN-POSTROUTING -m mark --mark 0x80000/0x80000 -j OVN-MASQUERADE
-A OVN-POSTROUTING -p tcp -m tcp --tcp-flags SYN NONE -m conntrack --ctstate NEW -j RETURN
-A OVN-POSTROUTING -m set ! --match-set ovn40subnets src -m set ! --match-set ovn40other-node src -m set --match-set ovn40subnets-nat dst -j RETURN
-A OVN-POSTROUTING -m set --match-set ovn40subnets-nat src -m set ! --match-set ovn40subnets dst -j OVN-MASQUERADE
-A OVN-PREROUTING -i ovn0 -m set --match-set ovn40subnets src -m set --match-set ovn40services dst -j MARK --set-xmark 0x4000/0x4000
-A OVN-PREROUTING -p tcp -m addrtype --dst-type LOCAL -m set --match-set KUBE-NODE-PORT-LOCAL-TCP dst -j MARK --set-xmark 0x80000/0x80000
-A OVN-PREROUTING -p tcp -m set --match-set ovn40other-node src -m set --match-set KUBE-NODE-PORT-LOCAL-TCP dst -j MARK --set-xmark 0x4000/0x4000
-A OVN-PREROUTING -p udp -m addrtype --dst-type LOCAL -m set --match-set KUBE-NODE-PORT-LOCAL-UDP dst -j MARK --set-xmark 0x80000/0x80000
-A OVN-PREROUTING -p udp -m set --match-set ovn40other-node src -m set --match-set KUBE-NODE-PORT-LOCAL-UDP dst -j MARK --set-xmark 0x4000/0x4000
COMMIT
# Completed on Fri Feb 23 11:59:21 2024
[root@middleware-dev-439-d410 huzhi]#
